Fix navbar jump issues

--- a/style.css
+++ b/style.css
@@ -383,12 +383,9 @@ body {
     object-fit: cover;
 }
 
-/*just use grid here instead. but for now it shows general layout*/
 .description-section{
     padding-top: 20px;
     padding-bottom: 20px;
-    /*padding-left: 150px;
-    padding-right: 150px;*/
     padding-left: 20%;
     padding-right: 20%;
     color: white;
@@ -402,7 +399,7 @@ body {
 
 
 /***** GALLERY SECTION *******/
-.gallery-section{ /*This will be a grid of images with no writing for a gallery*/
+.gallery-section{
     display: flex;
     flex-flow: row;
     flex-wrap: wrap;
